--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+#端口
 server.port=8088
-
+#去掉springBoot默认的Tomcat容器是用基于NIO的Web容器undertow
 server.undertow.io-threads=12
 server.undertow.worker-threads=256
 server.undertow.buffer-size=1024
