--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-#端口
+#log config
+logback.log.level=DEBUG
+logback.log.level.console=DEBUG
+logback.log.level.service=DEBUG
+logback.log.dir=D:\\log
+logging.config=classpath:logback-spring.xml
+#server config
 server.port=8088
-#去掉springBoot默认的Tomcat容器是用基于NIO的Web容器undertow
+#undertow config
 server.undertow.io-threads=12
 server.undertow.worker-threads=256
 server.undertow.buffer-size=1024
