--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 logback.log.level=DEBUG
 logback.log.level.console=DEBUG
 logback.log.level.service=DEBUG
-logback.log.dir=E:\\log
+logback.log.dir=D:\\log
 logging.config=classpath:logback-spring.xml
 #server config
 server.port=8088
